# riscv_5stage_simulator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.txt  cmake_install.cmake  compile_commands.json  consts.h  elf.cpp  elf.h  instruction.cpp  instruction.h  main.cpp  memory.cpp  memory.h  pipeline.cpp  pipeline.h  registers.h  riscv_simulator.out  syscall.cpp  syscall.h  tomasulo.cpp  tomasulo.h  tomasulo_2.cpp  tomasulo_2.h
sample/: hello_world.c  matrix.c  qsort.c
